--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     <div class="container">
        <h2> A Simple ToDo List App </h2>
        <form action ="/addtask" method="POST">
-        <input type="text" name="newtask" placeholder="add new task">        <button> Add Task </button>
+        <input type="text" name="newtask" placeholder="add new task">
+        <button> Add Task </button>
         <h2> Added Task </h2>
 
         <button formaction="/removetask" type="submit"> Remove </button>
