--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <button> Add Task </button>
         <h2> Added Task </h2>
             <% for(var i = 0; i < task.length; i++){ %>
-                <li><input type="checkbox" name="check" value=""/> </li>
+                <li><input type="checkbox" name="check" value="<%= task[i] %>"/><%= task[i] %> </li>
             <% } %>
         <button formaction="/removetask" type="submit"> Remove </button>
       </form>
